Minor changes in the code libraries

--- a/main.ipynb
+++ b/main.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,6 @@
     "import lommis_func\n",
     "import warnings\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "import shutil\n",
     "from openpyxl import load_workbook\n",
     "from openpyxl.styles import Alignment\n",
@@ -61,25 +60,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deleted all contents in the directory: Flights/012025\n",
-      "Fetching data for Start: 2025-01-01 00:00, Stop: 2025-01-02 00:00\n",
-      "Fetching data for Start: 2025-01-02 00:00, Stop: 2025-01-03 00:00\n",
-      "Fetching data for Start: 2025-01-03 00:00, Stop: 2025-01-04 00:00\n",
-      "Fetching data for Start: 2025-01-04 00:00, Stop: 2025-01-05 00:00\n",
-      "Fetching data for Start: 2025-01-05 00:00, Stop: 2025-01-06 00:00\n",
-      "Fetching data for Start: 2025-01-06 00:00, Stop: 2025-01-07 00:00\n",
-      "Fetching data for Start: 2025-01-07 00:00, Stop: 2025-01-08 00:00\n",
-      "Fetching data for Start: 2025-01-08 00:00, Stop: 2025-01-09 00:00\n",
-      "Fetching data for Start: 2025-01-09 00:00, Stop: 2025-01-10 00:00\n",
-      "Fetching data for Start: 2025-01-10 00:00, Stop: 2025-01-11 00:00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## FETCH DATA FROM LOMMIS' AIRFIELD ##\n",
     "\n",
@@ -204,58 +185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n",
-      "No valid runway detected.\n",
-      "No valid runway detected.\n",
-      "No valid runway detected.\n",
-      "No valid runway detected.\n",
-      "No valid runway detected.\n",
-      "No valid runway detected.\n",
-      "No valid runway detected.\n",
-      "No valid runway detected.\n",
-      "No valid runway detected.\n",
-      "No valid runway detected.\n",
-      "No valid runway detected.\n",
-      "No valid runway detected.\n",
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n",
-      "No airdrome circuit detected\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## ANALYZE FILTERED FLIGHTS AND CREATE DATA LIST ##\n",
     "flight_data = []\n",
     "for flight in traff_set_filtered:\n",
     "    day = flight.data.timestamp.iloc[0].strftime(\"%d\")\n",
     "    \n",
-    "    lommis_func.analyze_flight(flight, flight_data, [day, month, year], debug = False)\n",
+    "    lommis_func.analyze_flight(flight, airports[\"LSZT\"], flight_data, [day, month, year], debug = False)\n",
     "\n",
     "# sort columns by day and time\n",
     "flight_data.sort(\n",
@@ -268,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
