Several Updates in the Project

--- a/model/model_evaluation.ipynb
+++ b/model/model_evaluation.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "af65c162",
    "metadata": {},
    "outputs": [
@@ -102,13 +102,6 @@
     "print(f\"\\nFull label distribution:\")\n",
     "print(df_full['label'].value_counts())\n",
     "\n",
-    "# ============================================================\n",
-    "# STEP 1: Filter out flights that have ANY omitted segments\n",
-    "# ============================================================\n",
-    "print(\"\\n\" + \"=\"*60)\n",
-    "print(\"STEP 1: Filtering out flights with ANY omitted segments\")\n",
-    "print(\"=\"*60)\n",
-    "\n",
     "# Get all unique flights that have at least one omitted segment\n",
     "flights_with_omitted = df_full[df_full['label'] == 'omitted']['unique_flight_id'].unique()\n",
     "print(f\"Found {len(flights_with_omitted)} flights with omitted segments\")\n",
@@ -130,15 +123,6 @@
     "\n",
     "print(f\"\\nFinal labeled segments: {len(df_labeled)}\")\n",
     "\n",
-    "# ============================================================\n",
-    "# STEP 2: Recreate the same train/test split as training.ipynb\n",
-    "# (This ensures we use the EXACT same test set the model was trained on)\n",
-    "# ============================================================\n",
-    "print(\"\\n\" + \"=\"*60)\n",
-    "print(\"STEP 2: Recreating train/test split (same as training notebook)\")\n",
-    "print(\"=\"*60)\n",
-    "\n",
-    "# Use SAME random_state=42 as training.ipynb\n",
     "_, df_temp = train_test_split(df_labeled, test_size=0.3, random_state=42, stratify=df_labeled['label'])\n",
     "df_val, df_test = train_test_split(df_temp, test_size=0.5, random_state=42, stratify=df_temp['label'])\n",
     "\n",
@@ -147,13 +131,6 @@
     "print(f\"Test set: {len(df_test)} segments\")\n",
     "print(f\"\\nTest set label distribution:\")\n",
     "print(df_test['label'].value_counts())\n",
-    "\n",
-    "# ============================================================\n",
-    "# STEP 3: Build flight lookup from test set ONLY\n",
-    "# ============================================================\n",
-    "print(\"\\n\" + \"=\"*60)\n",
-    "print(\"STEP 3: Building flight lookup (test set only)\")\n",
-    "print(\"=\"*60)\n",
     "\n",
     "flight_lookup = {}\n",
     "for flight_id, group in df_test.groupby('unique_flight_id'):\n",
@@ -168,14 +145,6 @@
     "        print(f\"Failed to unpickle {flight_id}: {e}\")\n",
     "\n",
     "print(f\"Successfully loaded {len(flight_lookup)} flights from test set\")\n",
-    "\n",
-    "# ============================================================\n",
-    "# STEP 4: For test flights, get ALL segments (not just test segments)\n",
-    "# This ensures complete ground truth for each test flight\n",
-    "# ============================================================\n",
-    "print(\"\\n\" + \"=\"*60)\n",
-    "print(\"STEP 4: Computing ground truth from ALL segments of test flights\")\n",
-    "print(\"=\"*60)\n",
     "\n",
     "# Get the list of test flight IDs (331 flights)\n",
     "test_flight_ids = list(flight_lookup.keys())\n",
@@ -227,8 +196,7 @@
     "with_circuits = sum(1 for gt in flight_ground_truth.values() if gt['has_circuit'])\n",
     "without_circuits = len(flight_ground_truth) - with_circuits\n",
     "print(f\"Flights with circuits: {with_circuits} ({100*with_circuits/len(flight_ground_truth):.1f}%)\")\n",
-    "print(f\"Flights without circuits: {without_circuits} ({100*without_circuits/len(flight_ground_truth):.1f}%)\")\n",
-    "print(\"=\"*60)"
+    "print(f\"Flights without circuits: {without_circuits} ({100*without_circuits/len(flight_ground_truth):.1f}%)\")"
    ]
   },
   {
@@ -269,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d5dcc6c3",
    "metadata": {},
    "outputs": [
@@ -288,7 +256,7 @@
     "# Group by flight and count circuits per flight (using ALL segments from test flights)\n",
     "flight_ground_truth = {}\n",
     "\n",
-    "for flight_id, group in test_flights_segments.groupby('unique_flight_id'):  # CHANGED: use test_flights_segments\n",
+    "for flight_id, group in test_flights_segments.groupby('unique_flight_id'):\n",
     "    n_circuit_segments = len(group[group['label'] == 'traffic_circuit'])\n",
     "    n_not_circuit_segments = len(group[group['label'] == 'not_a_circuit'])\n",
     "\n",
@@ -313,7 +281,7 @@
     "\n",
     "    flight_ground_truth[flight_id] = {\n",
     "        'flight': flight_lookup[flight_id],\n",
-    "        'n_circuits': n_circuit_segments,  # Now counts ALL segments from this flight\n",
+    "        'n_circuits': n_circuit_segments,\n",
     "        'n_not_circuits': n_not_circuit_segments,\n",
     "        'has_circuit': n_circuit_segments > 0,\n",
     "        'airport_code': airport_code,\n",
@@ -341,7 +309,7 @@
     "- `'blstm'`: Bidirectional LSTM (sequential, 500×8 with phases)\n",
     "- `'cnn'`: 1D CNN (sequential, 500×8 with phases)\n",
     "\n",
-    "The function `find_aerodrome_circuits` now handles all model loading, feature extraction, and scaling internally based on the model type string."
+    "The function `find_aerodrome_circuits` handles all model loading, feature extraction, and scaling internally based on the model type string."
    ]
   },
   {
@@ -1427,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "5b403311",
    "metadata": {},
    "outputs": [
@@ -1817,16 +1785,18 @@
     "    except Exception as e:\n",
     "        print(f\"Error processing {flight_id}: {e}\")\n",
     "\n",
-    "print(f\"\\n✅ Evaluation complete! {len(evaluation_results)} flights evaluated with {model_type.upper()} model.\")"
+    "print(f\"\\nCompleted. {len(evaluation_results)} flights evaluated with {model_type.upper()} model.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "fccdc1ab",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# INITIAL RULE-BASED HEURISTIC APPROACH\n",
+    "\n",
     "from traffic.data import airports, eurofirs, opensky\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -2072,7 +2042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5b953d01",
    "metadata": {},
    "outputs": [
@@ -3052,7 +3022,7 @@
     }
    ],
    "source": [
-    "# Rule-based detector evaluation (test set, same as ML evaluation, with robust airport/runway handling, same logic as ML cell)\n",
+    "# Rule-based detector evaluation\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score, precision_score, recall_score, f1_score\n",
     "\n",
     "rb_results = []\n",
@@ -3305,7 +3275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "4c5b4775",
    "metadata": {},
    "outputs": [
@@ -3339,7 +3309,6 @@
     }
    ],
    "source": [
-    "# ========== COMPREHENSIVE MODEL COMPARISON: ALL ML MODELS vs RULE-BASED ==========\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -3603,6 +3572,14 @@
     "false_negatives = eval_df[(eval_df['gt_has_circuit'] == True) & (eval_df['ml_has_circuit'] == False)]\n",
     "print(f\"\\nFalse Negatives: {len(false_negatives)}\")\n",
     "print(false_negatives[['unique_flight_id', 'gt_n_circuits', 'ml_n_circuits']].head(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbc3be2e",
+   "metadata": {},
+   "source": [
+    "## Check Comparison"
    ]
   },
   {
@@ -12262,63 +12239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "5db357c0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BEFORE:\n",
-      "      segment_num          label\n",
-      "2950            0  not_a_circuit\n",
-      "2951            1  not_a_circuit\n",
-      "\n",
-      "AFTER:\n",
-      "      segment_num    label\n",
-      "2950            0  omitted\n",
-      "2951            1  omitted\n",
-      "\n",
-      "Overall label distribution:\n",
-      "label\n",
-      "not_a_circuit      2422\n",
-      "traffic_circuit     695\n",
-      "omitted             180\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "✅ Saved to EMERGENCY_SAVE.parquet\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Load the parquet file\n",
-    "df = pd.read_parquet('EMERGENCY_SAVE.parquet')\n",
-    "\n",
-    "# Check the current state\n",
-    "print(\"BEFORE:\")\n",
-    "print(df[(df['unique_flight_id'] == 'HBSGT_20250410_114423')][['segment_num', 'label']])\n",
-    "\n",
-    "# Update segments 0 and 1 to 'omitted'\n",
-    "mask = (df['unique_flight_id'] == 'HBSGT_20250410_114423') & (df['segment_num'].isin([0, 1]))\n",
-    "df.loc[mask, 'label'] = 'omitted'\n",
-    "\n",
-    "# Verify the change\n",
-    "print(\"\\nAFTER:\")\n",
-    "print(df[(df['unique_flight_id'] == 'HBSGT_20250410_114423')][['segment_num', 'label']])\n",
-    "\n",
-    "# Count distribution\n",
-    "print(\"\\nOverall label distribution:\")\n",
-    "print(df['label'].value_counts())\n",
-    "\n",
-    "# Save back to parquet\n",
-    "df.to_parquet('EMERGENCY_SAVE.parquet', index=False)\n",
-    "print(\"\\n✅ Saved to EMERGENCY_SAVE.parquet\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0cab7cda",
    "metadata": {},
    "outputs": [
@@ -12332,9 +12253,9 @@
     }
    ],
    "source": [
-    "# Save evaluation results\n",
+    "# if disired, save evaluation results\n",
     "eval_df.to_csv('evaluation_results.csv', index=False)\n",
-    "print(\"\\n✅ Saved evaluation results to evaluation_results.csv\")"
+    "print(\"\\nsaved evaluation results to evaluation_results.csv\")"
    ]
   }
  ],
