--- a/model/model_training.ipynb
+++ b/model/model_training.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "a4a6c606",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,6 @@
     "print('Columns:', df.columns.tolist())\n",
     "display(df.head())\n",
     "\n",
-    "# --- Verification helpers to cross-check with the app ---\n",
     "has_uid = 'unique_flight_id' in df.columns\n",
     "has_segn = 'segment_num' in df.columns\n",
     "has_label = 'label' in df.columns\n",
@@ -266,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ad109c3d",
    "metadata": {},
    "outputs": [
@@ -335,7 +334,6 @@
     }
    ],
    "source": [
-    "# 🔍 Search for KLM training airports in the dataset\n",
     "print('='*80)\n",
     "print('🔍 SEARCHING FOR KLM TRAINING AIRPORTS')\n",
     "print('='*80)\n",
@@ -408,7 +406,7 @@
     "    print('='*80)\n",
     "    \n",
     "else:\n",
-    "    print('⚠️ Warning: airport_code column not found in the dataset')\n"
+    "    print('⚠️ Warning: airport_code column not found in the dataset')"
    ]
   },
   {
